--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.4.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.15.5",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "cjs": "0.0.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
